updated game route api
